Fix new IDE warnings